# libwrclient

./: .gitignore  LICENSE.txt  README.md  buildlinux64.sh
Premake/: premake4.lua
libsrc/libogg/include/ogg/: config_types.h
libsrc/mpg123/src/libmpg123/: config.h  mpg123.h
linux64libs/lib/: libcurl.so.4.4.0
src/: CMakeLists.txt  decode_html_ents.c  internal.h  main.c  mp3.c  ogg.c  sdl2client.c  webradioclient.h
win32libs/lib/: libcurl.exp  libcurl.lib
win64libs/lib/: libcurl.exp  libcurl.lib
